--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -14,6 +14,7 @@
     "option2": "What we fund",
     "option3": "Board of Directors",
     "option4": "Strategic Partners",
+    "option5": "Complaint Form",
     "submenu1_1": "Home",
     "submenu1_2": "Who we are",
     "submenu1_3": "AMPB Members",
@@ -193,6 +194,40 @@
     "KirsiChavda_Desc3": "Ms. Chavda has experience in the field of development cooperation from varied angles. At the UN Population Fund, UNFPA, she focused on sexual and reproductive health and rights themes in Honduras for two years. ",
     "KirsiChavda_Desc4": "At the Finnish CSO Kepa’s country office in Nicaragua, she contributed to the strengthening of the civil society, awareness on the impacts of extractive industries and territorial governance in Mesoamerica for three years. ",
     "KirsiChavda_Desc5": "Ms. Chavda holds a MSSc. in both Social Policy and Social Work from the Universities of Eastern Finland and Jyväskylä."
+  },
+  "sectionForm": {
+    "title": "Complaint Form",
+    "submit": "Submit",
+    "textarea1": "Reason for concern as a result of the following failures, neglects, or grievances:",
+    "textarea2": "Indicate the name of the person or agency causing the problem (contracting companies, implementing organizations, state institutions, individuals, technicians, among others.):",
+    "textarea3": "Description of the consequences resulting from the failures or neglects of FTM and/or other executing partners:",
+    "textarea4": "List (if known) of the project principles or procedures that are considered not to have been respected:",
+    "textarea5": "Specify corrective measures and/or remediation and compensation solutions that should be implemented in response to possible problems caused:",
+    "legend": "General information of the affected party:",
+    "nombre": "Name:",
+    "genero": "Gender:",
+    "telefono": "Phone:",
+    "correo": "Email:",
+    "etnia": "Ethnic Origin:",
+    "comunidadLinguistica": "Linguistic Community:",
+    "organizacion": "Organization:",
+    "comunidad": "Community:",
+    "municipio": "Municipality:",
+    "departamento": "Department:",
+    "Masculino": "Male",
+    "Femenino": "Female",
+    "Otro": "Other",
+    "Indigena": "Indigenous",
+    "Afrodescendiente": "Afrodescendant",
+    "Campesino": "Rural",
+    "Castellano": "Spanish",
+    "Ingles": "English",
+    "Miskitu": "Miskitu",
+    "Cabécar": "Cabécar",
+    "loading": "Submitting, please wait",
+    "close": "Close",
+    "success": "Your complaint has been submitted",
+    "fail": "An error occurred, please try again later"
   }
 
 }
