--- a/src/app/i18n/locales/es/translation.json
+++ b/src/app/i18n/locales/es/translation.json
@@ -1,18 +1,19 @@
 {
   "topH1": "FONDO TERRITORIAL MESOAMERICANO",
   "subH1": "de la Alianza Mesoamericana de Pueblos y Bosques",
-  "lang":"lenguaje",
+  "lang": "lenguaje",
   "aria": {
     "homeLogo": "Ir al inicio",
     "imgAMPBLogo": "Alianza Mesoamericana de Pueblos y Bosques",
     "imgEMDLLogo": "Escuela Mesoamericana de Liderazgo",
     "imgCMLTMLogo": "Coordinadora de Mujeres Líderes Territoriales de Mesoamérica"
   },
-  "menu" : {
+  "menu": {
     "option1": "Quiénes somos",
     "option2": "Qué financiamos",
     "option3": "Junta Directiva",
     "option4": "Socios Estratégicos",
+    "option5": "Formulario de quejas",
     "submenu1_1": "Inicio",
     "submenu1_2": "Quiénes somos",
     "submenu1_3": "Miembros de la AMPB",
@@ -21,7 +22,6 @@
     "submenu1_6": "Cómo trabajamos",
     "submenu1_7": "Organigrama FTM"
   },
-
   "sectionLogos": {
     "title": "Socios Estratégicos"
   },
@@ -33,14 +33,14 @@
   "section3": {
     "title": "Miembros de la AMPB",
     "text1": "Nuestra cooperación se enfoca en Mesoamérica, colaborando estrechamente con la membrecía de la AMPB y otras organizaciones de Pueblos Indígenas y Comunidades Locales (PICLs).",
-    "org1":"RED MOCAF",
+    "org1": "RED MOCAF",
     "org2": "ACOFOP",
     "org3": "CONGRESO GENERAL GUNA",
     "org4": "COMARCA EMBERÁ-WOUNAAN",
-    "org5":"INHWANKA RAYA",
+    "org5": "INHWANKA RAYA",
     "org6": "RIBCA",
     "org7": "FEPROAH",
-    "org8":"MASTA",
+    "org8": "MASTA",
     "org9": "ALIANZA NACIONAL FORESTAL",
     "org10": "ASOCIACIÓN UTZ CHE’"
   },
@@ -56,7 +56,6 @@
     "text3_part2": "creación y fortalecimiento de capacidades, fomentando la sostenibilidad e impactos positivos en la inversión.",
     "text4_part1": "1.",
     "text4_part2": " 2021. Rainforest Foundation Norway. Falling Short: Donor funding for Indigenous Peoples and local communities to secure tenure rights and manage forests in tropical countries  (2011–2020)."
-  
   },
   "section5": {
     "title": "Qué financiamos",
@@ -98,7 +97,7 @@
     "title": "Cómo trabajamos",
     "pre_text1": "A través de un mecanismo de convocatorias para financiar pequeñas y medianas donaciones con costos menores de transacción, con enfoque de derechos a organizaciones de PICL ubicadas en ecosistemas claves de bosques, biodiversidad y conectividad en Mesoamérica.",
     "pre_text2": "Acompaña de manera continua y adaptada culturalmente a las organizaciones de Pueblos Indígenas y Comunidades Locales mediante procesos de entrenamiento, capacitaciones y metodologías para fortalecer sus procesos institucionales y de gobernanza, promoviendo así la sostenibilidad y el impacto cuantitativo y cualitativo de la inversión.",
-    "pre_text3":"De manera conjunta e interdisciplinaria con las diferentes unidades especializadas de la AMPB, que son la Escuela Mesoamericana de Liderazgo (EML), y la Coordinadora de Mujeres Líderes Territoriales (CMLT).",
+    "pre_text3": "De manera conjunta e interdisciplinaria con las diferentes unidades especializadas de la AMPB, que son la Escuela Mesoamericana de Liderazgo (EML), y la Coordinadora de Mujeres Líderes Territoriales (CMLT).",
     "text1": "El FTM está gobernado por una Junta Directiva de 7 personas*, compuesta por:",
     "text2": "4 miembros de la AMPB.",
     "text3": "3 personas independientes",
@@ -140,11 +139,11 @@
     "col4-Text1": "auditorías realizadas",
     "col4-Text2": "evaluación externa general del piloto"
   },
-  "setionorganigrama" : {
+  "setionorganigrama": {
     "title": "Organigrama FTM",
     "testaside": "Secretaría Técnica de la",
     "text1": "Junta Directiva",
-    "subText1": "Gerencia", 
+    "subText1": "Gerencia",
     "text2": "Dirección Administración y finanzas",
     "text3": "Dirección de proyectos",
     "text4": "Dirección de gestión de fondos",
@@ -154,13 +153,12 @@
     "text8": "Oficial de Monitoreo y Seguimiento",
     "text9": "Oficial de Comunicación"
   },
-  "SectionGovernanceLawEntrepreneurships" : {
+  "SectionGovernanceLawEntrepreneurships": {
     "title1": "GOBERNANZA Y DERECHOS",
     "g1SubtTitle1": "ACOFOP",
     "g1SubtText1": "en Petén, Guatemala fue apoyado para desarrollar su proceso de incidencia y lograr la renovación de 9 concesiones forestales y el otorgamiento de dos nuevas concesiones por 25 años más, respectivamente.",
     "g1SubtTitle2": "RIBCA",
     "g1SubtText2": "en Costa Rica, impulsó el decreto ejecutivo del mecanismo general de consulta, un instrumento legal para que las instituciones realicen las consultas bajo el principio de consentimiento libre , previo e informado (CLPI).",
-    
     "title2": "EMPRENDIMIENTOSS",
     "g2SubtTitle1": "25",
     "g2SubtText1": "emprendimientos apoyados sobre autosuficiencia alimentaria",
@@ -180,18 +178,49 @@
     "JeffreyCampbell_Desc2": "Centrado en organizaciones de productores forestales y agrícolas, silvicultura comunitaria, política forestal, diversidad biocultural y soberanía alimentaria, empoderamiento de los pueblos indígenas, medios de vida rurales basados ​​en el paisaje, desarrollo sostenible y resiliencia y adaptación al cambio climático.",
     "JeffreyCampbell_Desc3": "También publica poesía, interpreta y graba música como jhaffur khan azad darakth, cofundador y compositor de la Orquesta naiF. ",
     "JeffreyCampbell_Desc4": "Nacido y criado en la India, esposo, padre y abuelo.",
-    
     "SusanKandel_Name": "Susan Kandel",
     "SusanKandel_Desc1": "Susan Kandel es Directora Adjunta e Investigadora Principal de PRISMA. ",
     "SusanKandel_Desc2": "Tiene una licenciatura en sociología, una maestría en desarrollo regional e internacional de la Universidad de California, Los Ángeles y estudios de posgrado en desarrollo sostenible de recursos de UC Berkeley, y en derechos humanos internacionales de la Instituto Internacional de Derechos Humanos. ",
     "SusanKandel_Desc3": "Las áreas de especialización de la Sra. Kandel incluyen: gobernanza territorial y desarrollo rural; cambio climático y mitigación basada en la adaptación; Migración, desarrollo y gestión de recursos naturales; entre otros temas relevantes. Antes de trabajar en PRISMA, la Sra. Kandel fue Directora del Departamento de Derechos Humanos de un Centro de Refugiados de América Central ubicado en Los Ángeles y Coordinadora del Proyecto del Índice de Responsabilidad, que informó directamente el trabajo de las Comisiones Ad Hoc y de Verdad por mandato de la ONU de El Salvador como parte del proceso de los Acuerdos de Paz.",
-    
     "KirsiChavda_Name": "Kirsi Chavda",
     "KirsiChavda_Desc1": "Kirsi Chavda es coordinadora de programas en la Fundación Siemenpuu, donde ha canalizado el apoyo a Organizaciones de la Sociedad Civil (OSC) en varios países africanos, asiáticos y latinoamericanos en diversos temas ambientales, incluida la conservación y el uso sostenible de los bosques comunitarios, así como la soberanía alimentaria.",
     "KirsiChavda_Desc2": "Actualmente, la Sra. Chavda gestiona el programa de Siemenpuu sobre agroecología feminista y bosques comunitarios con aliados en Liberia y Mozambique.",
     "KirsiChavda_Desc3": "La Sra. Chavda ha entrado el campo de la cooperación al desarrollo desde diferentes ángulos. En el Fondo de Población de las Naciones Unidas, UNFPA, se centró en temas de salud sexual y reproductive y derechos en Honduras durante dos años.",
     "KirsiChavda_Desc4": " En la oficina de país de la OSC finlandesa Kepa en Nicaragua, contribuyó al fortalecimiento de la sociedad civil, la concientización sobre los impactos de las industrias extractivas y la gobernanza territorial en Mesoamérica durante tres años.",
     "KirsiChavda_Desc5": "La Sra. Chavda tiene dos maestrías en ciencias sociales, una en Política Social y otra en Trabajo Social, de las Universidades del Este de Finlandia y la de Jyväskylä."
+  },
+  "sectionForm": {
+    "title": "Formulario de quejas",
+    "submit": "Enviar",
+    "textarea1": "Motivo de preocupación como resultado de las siguientes fallas, desatenciones o agravios:",
+    "textarea2": "Indicar el nombre de la persona o agencia que causa el problema (empresas contratistas, organizaciones implementadoras, instituciones del estado, personas particulares, técnicos, entre otros.):",
+    "textarea3": "Descripción de las consecuencias que derivaron de las fallas o desatenciones del FTM y/u otros socios ejecutores:",
+    "textarea4": "Listado (si se conoce) de los principios o procedimientos del proyecto que se considera que no se respetaron:",
+    "textarea5": "Menciones que medidas correctivas y/o que soluciones de remediación y compensación se deberían de llevar a cabo frente a los posibles problemas causados:",
+    "legend": "Datos generales de la parte afectada:",
+    "nombre": "Nombre:",
+    "genero": "Género:",
+    "telefono": "Teléfono:",
+    "correo": "Correo Electrónico:",
+    "etnia": "Origen Étnico:",
+    "comunidadLinguistica": "Comunidad Lingüística:",
+    "organizacion": "Organización:",
+    "comunidad": "Comunidad:",
+    "municipio": "Municipio:",
+    "departamento": "Departamento:",
+    "Masculino": "Masculino",
+    "Femenino": "Femenino",
+    "Otro": "Otro",
+    "Indigena": "Indígena",
+    "Afrodescendiente": "Afrodescendiente",
+    "Campesino": "Campesino",
+    "Castellano": "Castellano",
+    "Ingles": "Inglés",
+    "Miskitu": "Miskitu",
+    "Cabécar": "Cabécar",
+    "loading": "Enviando, espere por favor",
+    "close": "Cerrar",
+    "success": "Su queja ha sido enviada",
+    "fail": "Ha ocurrido un error, por favor inténtelo de nuevo más tarde"
   }
-
 }
