--- a/src/app/i18n/locales/es/translation.json
+++ b/src/app/i18n/locales/es/translation.json
@@ -192,18 +192,18 @@
   "sectionForm": {
     "title": "Formulario de quejas",
     "submit": "Enviar",
-    "textarea1": "Motivo de preocupación como resultado de las siguientes fallas, desatenciones o agravios:",
-    "textarea2": "Indicar el nombre de la persona o agencia que causa el problema (empresas contratistas, organizaciones implementadoras, instituciones del estado, personas particulares, técnicos, entre otros.):",
-    "textarea3": "Descripción de las consecuencias que derivaron de las fallas o desatenciones del FTM y/u otros socios ejecutores:",
-    "textarea4": "Listado (si se conoce) de los principios o procedimientos del proyecto que se considera que no se respetaron:",
+    "textarea1": "Motivo de preocupación y/o queja:",
+    "textarea2": "Indicar el nombre de la persona, agencia que ha causado la preocupación/ queja o reclamo (empresas contratistas, organizaciones implementadoras, instituciones del estado, personas particulares, técnicos, entre otros.):",
+    "textarea3": "Descripción de la situación o los hechos que preocupan o aquejan:",
+    "textarea4": "Qué procedimientos o principios considera que no se respetaron:",
     "textarea5": "Menciones que medidas correctivas y/o que soluciones de remediación y compensación se deberían de llevar a cabo frente a los posibles problemas causados:",
     "legend": "Datos generales de la parte afectada:",
     "nombre": "Nombre:",
     "genero": "Género:",
     "telefono": "Teléfono:",
     "correo": "Correo Electrónico:",
-    "etnia": "Origen Étnico:",
-    "comunidadLinguistica": "Comunidad Lingüística:",
+    "etnia": "Pertenece a una comunidad:",
+    "comunidadLinguistica": "Idioma principal hablado su comunidad:",
     "organizacion": "Organización:",
     "comunidad": "Comunidad:",
     "municipio": "Municipio:",
