--- a/src/app/i18n/locales/es/translation.json
+++ b/src/app/i18n/locales/es/translation.json
@@ -80,7 +80,7 @@
   },
   "section7": {
     "title": "Al 2028 el FTM aspira a:",
-    "text1": "incrementar financiamiento directo a un promedio anual de 30 a 40 donativos con montos a partir de USD 50 mil.",
+    "text1": "Incrementar financiamiento directo a un promedio anual de 30 a 40 donativos con montos a partir de USD 50 mil.",
     "text2": "Extender las zonas geográficas y territorios priorizados por el FTM, ",
     "text3": "involucrando a más socios y aliados estratégicos y expandiendo su apoyo a otras organizaciones más allá de la membresía de la AMPB."
   },
@@ -194,26 +194,26 @@
     "submit": "Enviar",
     "textarea1": "Motivo de preocupación y/o queja:",
     "textarea2": "Indicar el nombre de la persona, agencia que ha causado la preocupación/ queja o reclamo (empresas contratistas, organizaciones implementadoras, instituciones del estado, personas particulares, técnicos, entre otros.):",
-    "textarea3": "Descripción de la situación o los hechos que preocupan o aquejan:",
-    "textarea4": "Qué procedimientos o principios considera que no se respetaron:",
-    "textarea5": "Menciones que medidas correctivas y/o que soluciones de remediación y compensación se deberían de llevar a cabo frente a los posibles problemas causados:",
+    "textarea3": "Descripción de la situación o los hechos:",
+    "textarea4": "¿Cuáles son los procedimientos o principios que cree que no fueron respetados?",
+    "textarea5": "¿Tiene algún comentario o sugerencia para evitar o corregir esta situación actualmente o en el futuro?",
     "legend": "Datos generales de la parte afectada:",
     "nombre": "Nombre:",
     "genero": "Género:",
     "telefono": "Teléfono:",
     "correo": "Correo Electrónico:",
-    "etnia": "Pertenece a una comunidad:",
-    "comunidadLinguistica": "Idioma principal hablado su comunidad:",
+    "etnia": "Comunidad a la que pertenece:",
+    "comunidadLinguistica": "Idioma:",
     "organizacion": "Organización:",
-    "comunidad": "Comunidad:",
+    "comunidad": "Pais:",
     "municipio": "Municipio:",
-    "departamento": "Departamento:",
+    "departamento": "Localidad:",
     "Masculino": "Masculino",
     "Femenino": "Femenino",
     "Otro": "Otro",
     "Indigena": "Indígena",
     "Afrodescendiente": "Afrodescendiente",
-    "Campesino": "Campesino",
+    "Campesino": "Comunitario",
     "Castellano": "Castellano",
     "Ingles": "Inglés",
     "Miskitu": "Miskitu",
