--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -188,7 +188,21 @@
     "KirsiChavda_Desc2": "Currently Ms. Chavda manages Siemenpuu’s programme on Feminist Agroecology and Community Forests with partners in Liberia and Mozambique. ",
     "KirsiChavda_Desc3": "Ms. Chavda has experience in the field of development cooperation from varied angles. At the UN Population Fund, UNFPA, she focused on sexual and reproductive health and rights themes in Honduras for two years. ",
     "KirsiChavda_Desc4": "At the Finnish CSO Kepa’s country office in Nicaragua, she contributed to the strengthening of the civil society, awareness on the impacts of extractive industries and territorial governance in Mesoamerica for three years. ",
-    "KirsiChavda_Desc5": "Ms. Chavda holds a MSSc. in both Social Policy and Social Work from the Universities of Eastern Finland and Jyväskylä."
+    "KirsiChavda_Desc5": "Ms. Chavda holds a MSSc. in both Social Policy and Social Work from the Universities of Eastern Finland and Jyväskylä.",
+    "GustavoSanchez_Name": "Gustavo Sánchez Valle",
+    "GustavoSanchez_Desc1": "Gustavo Sánchez is originally from the State of Jalisco in Mexico, he is an Agricultural Engineer with a Specialist in Agricultural Economics from the Autonomous University of Chapingo (UACh) and has a Master's Degree in Regional Rural Development from the same university. ", 
+    "GustavoSanchez_Desc2": "He has specialized in strengthening forest community organizations by supporting communication activities, representation, project management, design of public policy proposals and participation in international spaces on behalf of indigenous organizations and local communities. ",
+    "GustavoSanchez_Desc3": "He is currently President of the Mexican Network of Peasant Forest Organizations (MOCAF Network), a network of forestry organizations, both indigenous and local communities, and is part of the board of directors of the Mesoamerican Alliance of Peoples and Forests (AMPB); of the Resources and Rights Initiative (RRI) and the Community Land Rights and Conservation Finance Initiative (CLARIFI).",
+  
+    "SaraMadriz_Name": "Sara Madriz Martínez",
+    "SaraMadriz_Desc1": "Sara Madriz Martínez, a Costa Rican Cabécar indigenous woman, is currently Spokesperson 1 and Youth Coordinator of the Association for the Integral Development of the Cabécar de Nairi Awari Indigenous Reserve (ADIRINA) in Pacuarito Siquirres, Costa Rica, one of the organizations that is part of the Bribri-Cabécar Indigenous Network (RIBCA), a group of eight indigenous territories in Costa Rica.",
+    "SaraMadriz_Desc2": "She is also Vice President of the Board of Directors of the Mesoamerican Alliance of Peoples and Forests. With more than 6 years of experience in the defense of indigenous rights and the preservation of indigenous culture." ,
+    
+    "GiuseppeOlo_Name": "Giuseppe Olo Villalaz ",
+    "GiuseppeOlo_Desc1": "Giuseppe Olo Villalaz is from the community of Usdub, Comarca Gunayala. He has a degree in Business Administration and more than 10 years of experience in issues related to the Indigenous Peoples' rights and Climate Change. ",
+    "GiuseppeOlo_Desc2": "He is also a substitute representative on the Board of Directors of AMPB and the Mesoamerican Territorial Fund. Founder of the digital platform TV Indígena, which aims to make visible the Indigenous Peoples of Abya Yala. " ,
+    "GiuseppeOlo_Desc3": "Throughout his career, he has worked in diverse national and international organizations, such as the International Alliance of Indigenous and Tribal Peoples of the Tropical Forests - IAITPTF, Cuatro Mundos Foundation. He currently serves as an advisor to the National Assembly of Panama, and as a consultant on issues of free, prior and informed consent, and also as a cultural facilitator in this area." 
+    
   },
   "sectionForm": {
     "title": "Complaint Form",
