--- a/src/app/i18n/locales/es/translation.json
+++ b/src/app/i18n/locales/es/translation.json
@@ -187,7 +187,19 @@
     "KirsiChavda_Desc2": "Actualmente, la Sra. Chavda gestiona el programa de Siemenpuu sobre agroecología feminista y bosques comunitarios con aliados en Liberia y Mozambique.",
     "KirsiChavda_Desc3": "La Sra. Chavda ha entrado el campo de la cooperación al desarrollo desde diferentes ángulos. En el Fondo de Población de las Naciones Unidas, UNFPA, se centró en temas de salud sexual y reproductive y derechos en Honduras durante dos años.",
     "KirsiChavda_Desc4": " En la oficina de país de la OSC finlandesa Kepa en Nicaragua, contribuyó al fortalecimiento de la sociedad civil, la concientización sobre los impactos de las industrias extractivas y la gobernanza territorial en Mesoamérica durante tres años.",
-    "KirsiChavda_Desc5": "La Sra. Chavda tiene dos maestrías en ciencias sociales, una en Política Social y otra en Trabajo Social, de las Universidades del Este de Finlandia y la de Jyväskylä."
+    "KirsiChavda_Desc5": "La Sra. Chavda tiene dos maestrías en ciencias sociales, una en Política Social y otra en Trabajo Social, de las Universidades del Este de Finlandia y la de Jyväskylä.",
+    "GustavoSanchez_Name": "Gustavo Sánchez Valle",
+    "GustavoSanchez_Desc1": "Gustavo Sánchez es originario del Estado de Jalisco en México, es Ingeniero Agrónomo Especialista en Economía Agrícola por la Universidad Autónoma Chapingo (UACh) y cuenta con una Maestría en Desarrollo Rural Regional por la misma casa de estudios.",
+    "GustavoSanchez_Desc2": "Se ha especializado en el fortalecimiento de organizaciones comunitarias forestales apoyando actividades de comunicación, representación, gestión de proyectos, diseño de propuestas de políticas públicas y participación en espacios internacionales en representación de organizaciones indígenas y de comunidades locales." ,
+    "GustavoSanchez_Desc3": "Actualmente es Presidente de la Red Mexicana de Organizaciones Campesinas Forestales (Red MOCAF), una red de organizaciones de forestería tanto indígenas como de comunidades locales y forma parte de las mesas directivas de la Alianza Mesoamericana de Pueblos y Bosques (AMPB); de la Iniciativa de los Recursos y los Derechos (RRI) y de la iniciativa Financiera para los Derechos Comunitarios a la Tierra y la Conservación (CLARIFI).",
+    "SaraMadriz_Name": "Sara Madriz Martínez",
+    "SaraMadriz_Desc1": "Sara Madriz Martínez, indígena Cabécar costarricense, actualmente es Vocal 1 y Coordinadora de Jóvenes en la Asociación de Desarrollo Integral de la Reserva Indígena Cabécar de Nairi Awari (ADIRINA) en Pacuarito de Siquirres, Costa Rica, una de las organizaciones que forma parte de la Red Indígena Bribri-Cabécar (RIBCA), un grupo de ocho territorios indígenas de Costa Rica.",
+    "SaraMadriz_Desc2": "También es Vicepresidenta de la Junta Directiva de la Alianza Mesoamericana de Pueblos y Bosques. Con más de 6 años de experiencia en defensa de los derechos indígenas y la preservación de la cultura indígena." ,
+    "GiuseppeOlo_Name": "Giuseppe Olo Villalaz ",
+    "GiuseppeOlo_Desc1": "Giuseppe Olo Villalaz es originario de la comunidad de Usdub, Comarca Gunayala. Es Licenciado en Administración de Empresas y tiene experiencia de más de 10 años en temas relacionados con los derechos de los Pueblos Indígenas y el Cambio Climático. ",
+    "GiuseppeOlo_Desc2": "Además, es representante suplente en la Junta Directiva de AMPB y del Fondo Territorial Mesoamericano. Fundador de la plataforma digital TV Indígena que busca visibilizar a los Pueblos Indígenas de Abya Yala." ,
+    "GiuseppeOlo_Desc3": "A lo largo de su carrera, ha trabajado en diversas organizaciones nacionales e internacionales, como laAlianza Internacional de los Pueblos Indígenas y Tribales de los Bosques Tropicales – IAITPTF, Fundación Cuatro Mundos. Actualmente se desempeña como asesor en la Asamblea Nacional de Panamá, y como consultor  en temas de consentimiento libre, previo e informado, y también como facilitador cultural en este ámbito." 
+  
   },
   "sectionForm": {
     "title": "Formulario de quejas",
