--- a/src/app/i18n/locales/es/translation.json
+++ b/src/app/i18n/locales/es/translation.json
@@ -19,7 +19,7 @@
     "submenu1_3": "Miembros de la AMPB",
     "submenu1_4": "Razón de ser",
     "submenu1_5": "Qué financiamos",
-    "submenu1_6": "Cómo trabajamos",
+    "submenu1_6": "¿Cómo trabajamos?",
     "submenu1_7": "Organigrama FTM"
   },
   "sectionLogos": {
@@ -58,8 +58,8 @@
     "text4_part2": " 2021. Rainforest Foundation Norway. Falling Short: Donor funding for Indigenous Peoples and local communities to secure tenure rights and manage forests in tropical countries  (2011–2020)."
   },
   "section5": {
-    "title": "Qué financiamos",
-    "text1": "El FTM apoya iniciativas estratégicas definidas por las propias comunidades y que tienen potencial para ser replicables, escalables o de convertirse en política pública. Dentro de las diferentes ventanillas temáticas de financiación, están:",
+    "title": "¿Qué financiamos?",
+    "text1": "El FTM apoya iniciativas estratégicas definidas por las propias comunidades y/o que tienen potencial para ser replicables, escalables o de convertirse en política pública. Dentro de las diferentes ventanillas temáticas de financiación, están:",
     "bullet1": "Mitigación y adaptación al Cambio Climático.",
     "bullet2": "Conservación de biodiversidad y manejo sostenible de recursos naturales.",
     "bullet3": "Gobernanza y Derechos de los Pueblos Indígenas y Comunidades Locales.",
@@ -94,10 +94,13 @@
     "text2": "Capitalización, diversificación de actividades y servicios del FTM."
   },
   "section9": {
-    "title": "Cómo trabajamos",
+    "title": "¿Cómo trabajamos?",
     "pre_text1": "A través de un mecanismo de convocatorias para financiar pequeñas y medianas donaciones con costos menores de transacción, con enfoque de derechos a organizaciones de PICL ubicadas en ecosistemas claves de bosques, biodiversidad y conectividad en Mesoamérica.",
-    "pre_text2": "Acompaña de manera continua y adaptada culturalmente a las organizaciones de Pueblos Indígenas y Comunidades Locales mediante procesos de entrenamiento, capacitaciones y metodologías para fortalecer sus procesos institucionales y de gobernanza, promoviendo así la sostenibilidad y el impacto cuantitativo y cualitativo de la inversión.",
-    "pre_text3": "De manera conjunta e interdisciplinaria con las diferentes unidades especializadas de la AMPB, que son la Escuela Mesoamericana de Liderazgo (EML), y la Coordinadora de Mujeres Líderes Territoriales (CMLT).",
+    "pre_text2": "Acompañando de manera continua y adaptada culturalmente a las organizaciones de Pueblos Indígenas y Comunidades Locales mediante procesos de entrenamiento, capacitaciones y metodologías para fortalecer sus procesos institucionales y de gobernanza, promoviendo así la sostenibilidad y el impacto cuantitativo y cualitativo de la inversión.",
+    "pre_text3": "De manera conjunta e interdisciplinaria con las diferentes unidades especializadas de la AMPB, que son la ",
+    "pre_text4": "Escuela Mesoamericana de Liderazgo (EML)",
+    "pre_text5": ", y la Coordinadora de ",
+    "pre_text6": "Mujeres Líderes Territoriales (CMLT).",
     "text1": "El FTM está gobernado por una Junta Directiva de 7 personas*, compuesta por:",
     "text2": "4 miembros de la AMPB.",
     "text3": "3 personas independientes",
@@ -185,7 +188,7 @@
     "KirsiChavda_Name": "Kirsi Chavda",
     "KirsiChavda_Desc1": "Kirsi Chavda es coordinadora de programas en la Fundación Siemenpuu, donde ha canalizado el apoyo a Organizaciones de la Sociedad Civil (OSC) en varios países africanos, asiáticos y latinoamericanos en diversos temas ambientales, incluida la conservación y el uso sostenible de los bosques comunitarios, así como la soberanía alimentaria.",
     "KirsiChavda_Desc2": "Actualmente, la Sra. Chavda gestiona el programa de Siemenpuu sobre agroecología feminista y bosques comunitarios con aliados en Liberia y Mozambique.",
-    "KirsiChavda_Desc3": "La Sra. Chavda ha entrado el campo de la cooperación al desarrollo desde diferentes ángulos. En el Fondo de Población de las Naciones Unidas, UNFPA, se centró en temas de salud sexual y reproductive y derechos en Honduras durante dos años.",
+    "KirsiChavda_Desc3": "La Sra. Chavda ha entrado el campo de la cooperación al desarrollo desde diferentes ángulos. En el Fondo de Población de las Naciones Unidas, UNFPA, se centró en temas de salud sexual y reproductiva y derechos en Honduras durante dos años.",
     "KirsiChavda_Desc4": " En la oficina de país de la OSC finlandesa Kepa en Nicaragua, contribuyó al fortalecimiento de la sociedad civil, la concientización sobre los impactos de las industrias extractivas y la gobernanza territorial en Mesoamérica durante tres años.",
     "KirsiChavda_Desc5": "La Sra. Chavda tiene dos maestrías en ciencias sociales, una en Política Social y otra en Trabajo Social, de las Universidades del Este de Finlandia y la de Jyväskylä.",
     "GustavoSanchez_Name": "Gustavo Sánchez Valle",
