--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -202,10 +202,15 @@
     "SaraMadriz_Desc1": "Sara Madriz Martínez, a Costa Rican Cabécar indigenous woman, is currently Spokesperson 1 and Youth Coordinator of the Association for the Integral Development of the Cabécar de Nairi Awari Indigenous Reserve (ADIRINA) in Pacuarito Siquirres, Costa Rica, one of the organizations that is part of the Bribri-Cabécar Indigenous Network (RIBCA), a group of eight indigenous territories in Costa Rica.",
     "SaraMadriz_Desc2": "She is also Vice President of the Board of Directors of the Mesoamerican Alliance of Peoples and Forests. With more than 6 years of experience in the defense of indigenous rights and the preservation of indigenous culture." ,
     
-    "GiuseppeOlo_Name": "Giuseppe Olo Villalaz ",
-    "GiuseppeOlo_Desc1": "Giuseppe Olo Villalaz is from the community of Usdub, Comarca Gunayala. He has a degree in Business Administration and more than 10 years of experience in issues related to the Indigenous Peoples' rights and Climate Change. ",
-    "GiuseppeOlo_Desc2": "He is also a substitute representative on the Board of Directors of AMPB and the Mesoamerican Territorial Fund. Founder of the digital platform TV Indígena, which aims to make visible the Indigenous Peoples of Abya Yala. " ,
-    "GiuseppeOlo_Desc3": "Throughout his career, he has worked in diverse national and international organizations, such as the International Alliance of Indigenous and Tribal Peoples of the Tropical Forests - IAITPTF, Cuatro Mundos Foundation. He currently serves as an advisor to the National Assembly of Panama, and as a consultant on issues of free, prior and informed consent, and also as a cultural facilitator in this area." 
+    "GiuseppeOlo_Name": "Marcedonio Cortave ",
+    "GiuseppeOlo_Desc1": "Marcedonio Cortave, Founder and Executive Director of the Association of Forest Communities of Petén (ACOFOP) in Guatemala, has achieved personal and institutional successes, being an emblematic icon in the organization and conservation of the natural and cultural resources of the Peten region.",
+    "GiuseppeOlo_Desc2": "Under his leadership, ACOFOP has earned nationally and internationally recognized awards and achievements in conservation through the participation of organized civil society in the management of natural resources. Mr. Cortave's vision is that, \"To sustain the forest, communities must first be sustained and consolidated\".  That is why his trajectory for the benefit of all Guatemalans has allowed him to receive the academic degree of Doctor Honoris Causa granted by the Faculty of Agronomy of the glorious and three-hundred-year-old University of San Carlos de Guatemala (USAC)." ,
+    "GiuseppeOlo_Desc3": "" ,
+
+    "Anibal_Name": "Aníbal Sánchez-Sagla Dummad",
+    "Anibal_Desc1": "Aníbal Sánchez-Sagla Dummad of the Guna General Congress,  from the community of Mandi Ugbigandub in Panama. From a young age, he immersed himself in various Guna treaties and traditional medicine.",
+    "Anibal_Desc2": "Holder of the title of Argar (interpreter of treaties, Bab Igar, and Guna knowledge) in the Gunayala Region, Aníbal has been serving as the Sagla Dummad for the past five years. Additionally, he holds the position of spokesperson on the Board of Directors of the Mesoamerican Alliance of Peoples and Forests (AMPB) and also for the Mesoamerican Territorial Fund." 
+    
     
   },
   "sectionForm": {
