--- a/src/app/i18n/locales/es/translation.json
+++ b/src/app/i18n/locales/es/translation.json
@@ -198,11 +198,16 @@
     "SaraMadriz_Name": "Sara Madriz Martínez",
     "SaraMadriz_Desc1": "Sara Madriz Martínez, indígena Cabécar costarricense, actualmente es Vocal 1 y Coordinadora de Jóvenes en la Asociación de Desarrollo Integral de la Reserva Indígena Cabécar de Nairi Awari (ADIRINA) en Pacuarito de Siquirres, Costa Rica, una de las organizaciones que forma parte de la Red Indígena Bribri-Cabécar (RIBCA), un grupo de ocho territorios indígenas de Costa Rica.",
     "SaraMadriz_Desc2": "También es Vicepresidenta de la Junta Directiva de la Alianza Mesoamericana de Pueblos y Bosques. Con más de 6 años de experiencia en defensa de los derechos indígenas y la preservación de la cultura indígena." ,
-    "GiuseppeOlo_Name": "Giuseppe Olo Villalaz ",
-    "GiuseppeOlo_Desc1": "Giuseppe Olo Villalaz es originario de la comunidad de Usdub, Comarca Gunayala. Es Licenciado en Administración de Empresas y tiene experiencia de más de 10 años en temas relacionados con los derechos de los Pueblos Indígenas y el Cambio Climático. ",
-    "GiuseppeOlo_Desc2": "Además, es representante suplente en la Junta Directiva de AMPB y del Fondo Territorial Mesoamericano. Fundador de la plataforma digital TV Indígena que busca visibilizar a los Pueblos Indígenas de Abya Yala." ,
-    "GiuseppeOlo_Desc3": "A lo largo de su carrera, ha trabajado en diversas organizaciones nacionales e internacionales, como laAlianza Internacional de los Pueblos Indígenas y Tribales de los Bosques Tropicales – IAITPTF, Fundación Cuatro Mundos. Actualmente se desempeña como asesor en la Asamblea Nacional de Panamá, y como consultor  en temas de consentimiento libre, previo e informado, y también como facilitador cultural en este ámbito." 
-  
+ 
+    "GiuseppeOlo_Name": "Marcedonio Cortave ",
+    "GiuseppeOlo_Desc1": "Marcedonio Cortave Fundador y Director Ejecutivo de la Asociación de Comunidades Forestales de Petén (ACOFOP) en Guatemala ha cosechado éxitos personales e institucionales, siendo un icono emblemático en el tema organizativo y de conservación de los recursos naturales y culturales de la región petenera.",
+    "GiuseppeOlo_Desc2": "Bajo su dirección, ACOFOP se ha hecho merecedor de premios y logros reconocidos nacional e internacionalmente en el tema de conservación mediante la participación de la sociedad civil organizada en el manejo de los recursos naturales. La visión del Señor Cortave dicha en sus propias palabras es que, \"Para sostener el bosque primero se debe sostener y consolidar a las comunidades\". Por eso su trayectoria en beneficio de todos los guatemaltecos, le ha permitido recibir el grado académico de Doctor Honoris Causa otorgado por la Facultad de Agronomía de la gloriosa y tricentenaria Universidad de San Carlos de Guatemala (USAC)." ,
+    "GiuseppeOlo_Desc3": "",
+
+    "Anibal_Name": "Aníbal Sánchez-Sagla Dummad",
+    "Anibal_Desc1": "Aníbal Sánchez-Sagla Dummad, miembro del Congreso General Guna y originario de la comunidad de Mandi Ugbigandub, en Panamá. Aprendió desde joven diversos tratados gunas y conocimientos sobre medicina tradicional.",
+    "Anibal_Desc2": "Posee el título de Argar (intérprete de tratados, Bab Igar y conocimientos Gunas) en la Comarca Gunayala. Desde hace 5 años, se desempeña como Sagla Dummad de la Comarca Gunayala y ocupa el cargo de VOCERO en la Junta Directiva de la Alianza Mesoamericana de Pueblos y Bosques (AMPB), así como en el Fondo Mesoamericano." 
+    
   },
   "sectionForm": {
     "title": "Formulario de quejas",
