--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -246,5 +246,9 @@
     "close": "Close",
     "success": "Your complaint has been submitted",
     "fail": "An error has occurred, please try again later"
+  },
+
+  "sectionDialogo": {
+    "title": "SCHEDULE"
   }
 }
